# Arx

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
assets/: tiles.h
assets/segments/: l.cpp  l.h  test_seg.json
assets/textures/: l.cpp  l.h  textures.json  tiles.cpp  tiles.h
assets/textures/dynamic/: dynamic.h  l.cpp  l.h  texture.json
assets/textures/static/: l.cpp  l.h  texture.json
src/: App.cpp  App.h  Box.cpp  Box.h  Drawer.cpp  Drawer.h  Segment.cpp  Segment.h
src/components/: CameraLock.h  CollisionC.h  GravityC.h  LocationC.cpp  LocationC.h  MultispriteC.h  PlayerC.h
src/drawer/: CameraSystem.h  Multisprite.cpp  Multisprite.h  SpriteSystem.cpp  SpriteSystem.h  TileSprite.cpp  TileSprite.h  TileSystem.cpp  TileSystem.h
src/physics/: CollisionC.h  GravitySystem.h  PhysicsSystem.cpp  PhysicsSystem.h
src/systems/: CameraSystem.cpp  ControlsSystem.cpp  ControlsSystem.h  GravitySystem.cpp  GravitySystem.h  PhysicsSystem.cpp  PhysicsSystem.h  SpriteSystem.cpp  SpriteSystem.h  TileSystem.cpp  TileSystem.h
tests/: hello_test.cpp  json.cpp
tests/ndarray/: ndarray_test.cpp
tests/vector/: vector_test.cpp
utility/: Eventer.h
utility/ndarray/: ndArray.h  ndArrayBase.h  ndArrayView.h
utility/vector/: Vector.cpp  Vector.h  VectorReadme.md  sfConvert.h
